objects/MP_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Advocacy_goal_3_steps__c</fullName>
        <label>Advocacy goal: 3 steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advocacy_goal_summary_description__c</fullName>
        <label>Advocacy goal: summary description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MP__c</fullName>
        <label>MP</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>MP Relationships</relationshipLabel>
        <relationshipName>MP_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>MP Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MPR Ref-{0000}</displayFormat>
        <label>MP Relationship Ref No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MP Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>